2010-12-15  Ryan S. Arnold  <rsa@us.ibm.com>

	* elf/Makefile: (check-execstack): Replace $(native-compile) with a
	similar rule which adds the sysdep directories to the header search in
	order to pick up the correct platform stackinfo.h.
	* elf/check-execstack.c (main): Check DEFAULT_STACK_PERMS for PF_X and
	perform test if it is, otherwise return successfully without testing.
	* elf/dl-load.c (_dl_map_object_from_fd): Source stack_flags from
	DEFAULT_STACK_PERMS define in stackinfo.h.
	* elf/dl-support.c (_dl_stack_flags): Source from DEFAULT_STACK_PERMS
	defined in stackinfo.h.
	* elf/rtld.c (_dl_starting_up): Source ._dl_stack_flags from
	DEFAULT_STACK_PERMS defined in stackinfo.h.
	* sysdeps/i386/stackinfo.h: Define DEFAULT_STACK_PERMS with PF_X.
	* sysdeps/ia64/stackinfo.h: Likewise.
	* sysdeps/s390/stackinfo.h: Likewise.
	* sysdeps/sh/stackinfo.h: Likewise.
	* sysdeps/sparc/stackinfo.h: Likewise.
	* sysdeps/x86_64/stackinfo.h: Likewise.
	* sysdeps/powerpc/stackinfo.h: Define DEFAULT_STACK_PERMS without
	PF_X for powerpc64.  Retain PF_X for powerpc32.

2010-12-19  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/readdir_r.c (__READDIR_R): Compute reclen more
	accurately.
	* sysdeps/unix/sysv/linux/wordsize-64/readdir_r.c: Define
	GETDENTS_64BIT_ALIGNED.

2010-12-14  Ulrich Drepper  <dreper@gmail.com>

	* sysdeps/i386/i686/multiarch/strcmp.S: Undo accidental checkin.

2010-12-10  Andreas Schwab  <schwab@redhat.com>

	* wcsmbs/wchar.h (wcpcpy, wcpncpy): Only declare under
	_GNU_SOURCE.

	* wcsmbs/wchar.h (wcpcpy, wcpncpy): Add __restrict.
	* wcsmbs/bits/wchar2.h (__wmemmove_chk_warn, wmemmove, wmemset):
	Remove __restrict.
	(wcscpy, __wcpcpy_chk, __wcpcpy_alias, wcpcpy, wcsncpy, wcpncpy)
	(wcscat, wcsncat, __wcrtomb_chk, wcrtomb): Add __restrict.

2010-12-09  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11655]
	* stdlib/msort.c (qsort_r): Make sure both phys_pages and pagesize
	are initialized.

2010-12-09  Jakub Jelinek  <jakub@redhat.com>
